@@ -4,7 +4,7 @@ AUX ecasound-2.4.6.1-gcc43.patch 1358 RMD160 42a5d7616726acba1e493df36c96d69b492
 AUX ecasound-2.5.0-gcc43.patch 392 RMD160 4a3f83de03420950244242b40517b22aeb7a872d SHA1 ad5faa2b5c9cdb67fb9a284144ca6ba566f1f67f SHA256 328d58d03f0abfd7d0b450ade908e88eb671040db38c00f91b1efc7695309de4
 DIST ecasound-2.5.2.tar.gz 975972 RMD160 1964af347dc2c32fb72eb49f1c8208c6fefb7b99 SHA1 def017029b1694f62725a3512a678858232e75b7 SHA256 f40f0a8335fc0d474e5b6dfd9a47f68f809a819d406a21953b66f209bc65c115
 DIST ecasound-2.6.0.tar.gz 966629 RMD160 25ca71ff8f270ee871cb3f86f9e79e22b866d0cc SHA1 fb34fd31d112a4a1d3e1a87f302324152f62eac7 SHA256 925d12a422883c356565c542110d070f61c3693e01eaa1b00eb25082e4779f88
-EBUILD ecasound-2.5.2.ebuild 2671 RMD160 95a999e9e83b9cf8d837f8232e9e065455520ce7 SHA1 497a9e7f16f5c7d0b07212a59564660ec004933f SHA256 5c91edcf01f4efab923304bcee45894a43cfef3bcedae6aca4f16c6ed0eae777
-EBUILD ecasound-2.6.0.ebuild 2307 RMD160 3a5532792b3b59be1a1f370dd10f768059bef5d7 SHA1 bef8e083c4423de88be1f872944a699cbb595dc6 SHA256 34ff8a549188539e37620b16c9f36b07dd3d0a4c61f25303fb93b43b93a1d7c7
-MISC ChangeLog 8434 RMD160 91d0cffe0486e4a6c035002debae5cc0d20e728f SHA1 f1b6cfb9abb9b2112d823423420201b587d6e9e2 SHA256 12bc99d6b93f00555c64488d19ad68a8ac622773bc562b7be83ad1ed91bc96ab
+EBUILD ecasound-2.5.2.ebuild 2694 RMD160 f41b1cfadd05d4a5f2742ce95d8ba323b894084b SHA1 a23aa35a31987bd805f2fcc9fbf4ac58a3751e18 SHA256 b77442cbba009bc1e7fe99204dd295908380dae5b360efcfee45e89fb708f775
+EBUILD ecasound-2.6.0.ebuild 2328 RMD160 e5e0ce5c18640efe502babcdf2a3b42efef99ba1 SHA1 cbe382624b1eaea645f46e71895b382bba9ea557 SHA256 067ac7667b138b5d1844d3bfd39a708cb01e12e7acc51f6b65a3e18f060c72d9
+MISC ChangeLog 8535 RMD160 db9cdf6ef7b453c99a61d185167cdc5b237a04e9 SHA1 d0e34232143e305ba6b72410f8fb666a97c2e399 SHA256 879c0f5c334b116f458c00fe3e65a2b39582f38088d8a6ef6399136c86b354d5
 MISC metadata.xml 756 RMD160 6d3c33eeed4fd27e66efc39cef9df6e4f6c0c85c SHA1 ad6acbd92059cb3a42c63831bea1cca257918199 SHA256 1f0d3106e16d53e9dc59cbb3c5859e07d8381231e7eb0812eb6bf971e99aa37c
